--- a/CustomerOrderManagement/appsettings.json
+++ b/CustomerOrderManagement/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Server=DESKTOP-775CAAB\\MSSQLSERVER1; Database=OrderManagementByNihad; Trusted_Connection=True; TrustServerCertificate=True;"
+  }
 
 }
